tests/baselines/reference/aliasInaccessibleModule2.errors.txt
tests/cases/compiler/aliasInaccessibleModule2.ts(7,16): error TS4000: Import declaration 'R' is using private name 'N'.


==== tests/cases/compiler/aliasInaccessibleModule2.ts (1 errors) ====
    module M {
        module N {
            class C {
            }
            
        }
        import R = N;
                   ~
!!! error TS4000: Import declaration 'R' is using private name 'N'.
        export import X = R;
    }